compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test1.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn t() { True }"
---
----- SOURCE CODE
pub fn t() { True }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([t/0]).

-spec t() -> boolean().
t() ->
    true.
