compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test18.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn run() { case 1, 2 { a, b -> a } }"
---
----- SOURCE CODE
pub fn run() { case 1, 2 { a, b -> a } }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([run/0]).

-spec run() -> integer().
run() ->
    case {1, 2} of
        {A, B} ->
            A
    end.
