compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test1_1.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub type Money { Pound(Int) }\npub fn pound(x) { Pound(x) }"
---
----- SOURCE CODE
pub type Money { Pound(Int) }
pub fn pound(x) { Pound(x) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([pound/1]).
-export_type([money/0]).

-type money() :: {pound, integer()}.

-spec pound(integer()) -> money().
pound(X) ->
    {pound, X}.
