compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test1_3.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 107
expression: "pub external fn run() -> Int = \"Elixir.MyApp\" \"run\""
---
-module(the_app).
-compile(no_auto_import).

-export([run/0]).

-spec run() -> integer().
run() ->
    'Elixir.MyApp':run().

