compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test1_4.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "fn inc(x) { x + 1 }\n                    pub fn go() { 1 |> inc |> inc |> inc }"
---
----- SOURCE CODE
fn inc(x) { x + 1 }
                    pub fn go() { 1 |> inc |> inc |> inc }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/0]).

-spec inc(integer()) -> integer().
inc(X) ->
    X + 1.

-spec go() -> integer().
go() ->
    _pipe = 1,
    _pipe@1 = inc(_pipe),
    _pipe@2 = inc(_pipe@1),
    inc(_pipe@2).
