compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test1_5.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "fn add(x, y) { x + y }\n                    pub fn go() { 1 |> add(_, 1) |> add(2, _) |> add(_, 3) }"
---
----- SOURCE CODE
fn add(x, y) { x + y }
                    pub fn go() { 1 |> add(_, 1) |> add(2, _) |> add(_, 3) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/0]).

-spec add(integer(), integer()) -> integer().
add(X, Y) ->
    X + Y.

-spec go() -> integer().
go() ->
    _pipe = 1,
    _pipe@1 = fun(_capture) ->
        add(_capture, 1)
    end(_pipe),
    _pipe@2 = fun(_capture) ->
        add(2, _capture)
    end(_pipe@1),
    fun(_capture) ->
        add(_capture, 3)
    end(_pipe@2).
